--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/questions.json --port 1234"
+    "server": "json-server --watch data/studentInfo.json --port 1234"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.2",
